opam-version: "1.2"
maintainer: "opensource@janestreet.com"
authors: ["Jane Street Group, LLC <opensource@janestreet.com>"]
homepage: "https://github.com/janestreet/async_inotify"
bug-reports: "https://github.com/janestreet/async_inotify/issues"
dev-repo: "https://github.com/janestreet/async_inotify.git"
license: "Apache-2.0"
build: [
  ["jbuilder" "build" "--only-packages" "async_inotify" "--root" "." "-j" jobs "@install"]
]
depends: [
  "async"
  "async_find"
  "core"
  "jbuilder"                {build & >= "1.0+beta2"}
  "ppx_driver"
  "ppx_jane"
  "inotify"
  "ocaml-migrate-parsetree" {>= "0.4"}
]
available: [ ocaml-version >= "4.03.0" ]
descr: "
Async wrapper for inotify
"
